hphp/test/zend/good/ext-standard-array/bug25758.php
<?php
	$a = array ("quote'" => array("quote'"));
	echo var_export($a, true);
?>